Fix right-panel positioning with new JS. Fix menu-icon positioning, z-index, and remove invisible white arrow.

--- a/src/dssweb.theme.magic/dssweb/theme/magic/static/sass/components/_pager.scss
+++ b/src/dssweb.theme.magic/dssweb/theme/magic/static/sass/components/_pager.scss
@@ -53,4 +53,14 @@
 	}
 	
 }
+
+@media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) { // 768 < width < 991
+	
+	.pager {
+		padding-top: 25px;
+		padding-bottom: 25px;
+	}
+
+}
+
 /* _pager.scss */
